# DifferenceSchema

./: CMakeLists.txt  Calculate.cpp  Calculate.h  FDM.nb  README.MD  main.cpp
FDM/: CMakeLists.txt  Calculate.cpp  Calculate.h  FDM.cpp  FDM.h
MatrixLib/: MatrixLib.h  MatrixLib.hpp
Tests/: CMakeLists.txt  TestFDM.cpp  input.txt  input2.txt
